tests/snapshots/integration__integration_tests__switch__switch_linked_worktree_detached.snap
---
source: tests/integration_tests/switch.rs
info:
  program: wt
  args:
    - switch
    - feature
  env:
    APPDATA: "[TEST_CONFIG_HOME]"
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    HOME: "[TEST_HOME]"
    LANG: C
    LC_ALL: C
    PATH: "[PATH]"
    SOURCE_DATE_EPOCH: "1735776000"
    USERPROFILE: "[TEST_HOME]"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
    XDG_CONFIG_HOME: "[TEST_CONFIG_HOME]"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
🟡 [33mWorktree at [1m[REPO].feature[22m. Branch doesn't match path: expecting [1mfeature[22m, got detached HEAD (cannot cd, no shell integration)[39m
💡 [2mRun [90mwt config shell install[39m to enable automatic cd[22m
